# typenum-prime-rs

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  build.rs
src/: lib.rs  private.rs  test_small_constants.rs
src/private/: misc.rs  mod.rs  reduction.rs  trial_division.rs
tests/: larger_primes.rs
util/: generate_small_constants_test.py
