[package]
name = "typenum-prime"
version = "0.2.0"
authors = ["David Creswick <dcrewi@gyrae.net>"]
license = "MIT/Apache-2.0"
description = "compile-time primality testing of type-level integers from the typenum crate"
repository = "https://github.com/dcrewi/typenum-prime-rs"
documentation = "https://docs.rs/typenum-prime"
readme = "README.md"
keywords = ["prime", "mathematics"]
categories = ["no-std"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
typenum = "^1.9"
